metadata/force-app/main/default/objects/CustomName_zkJjt__c/CustomName_zkJjt__c.object-meta.xml
<CustomObject>
    <description>Description_YnWHP</description>
    <label>CustomLabel_bdGvt</label>
    <nameField>
        <label>CustomLabel_bdGvt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_bdGvts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>