metadata/force-app/main/default/objects/CustomName_zkJjt__c/fields/CustomField_sBRif__c.field-meta.xml
<CustomField>
    <fullName>CustomField_sBRif__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjPgLy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>